metadata/force-app/main/default/objects/CustomName_ZFwZF__c/CustomName_ZFwZF__c.object-meta.xml
<CustomObject>
    <description>Description_BmbwF</description>
    <label>CustomLabel_Kfrrr</label>
    <nameField>
        <label>CustomLabel_Kfrrr</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_Kfrrrs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>