metadata/force-app/main/default/objects/CustomName_ZFwZF__c/fields/CustomField_Envyk__c.field-meta.xml
<CustomField>
    <fullName>CustomField_Envyk__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldECUxB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>