metadata/force-app/main/default/objects/CustomName_ZFwZF__c/fields/CustomField_SnRPP__c.field-meta.xml
<CustomField>
    <fullName>CustomField_SnRPP__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldKfEVZ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>